Clean up code; fix double border on error messages

--- a/Demo90/static/css/register.css
+++ b/Demo90/static/css/register.css
@@ -12,34 +12,15 @@
    src: url(../fonts/HelveticaNeue/);
 }
 
-/*
-.hel {
-   font-family: 'HelveticaNeueCyr';
-   font-weight: 500;
+
+button:focus {
+   outline: none;
 }
 
-.rob {
-   font-family: 'Roboto';
-   font-weight: bold;
-}
-
-.sans {
-   font-family: 'sans-seif';
-}
-
-.hel2 {
-   font-family: 'HelveticaNeueTwo';
-   font-family: 'serif';
-}*/
-
-body {
-   font-weight: bold;
-}
-
-label {
-   color: #bb86fc;
-   display: block;
-   font-size: 13px;
+h2 {
+   color: white;
+   font-size: 30px;
+   padding: 10px 0;
 }
 
 input {
@@ -64,16 +45,16 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus,
 select:-webkit-autofill:active {
    border: none;
+   caret-color: white; /* cursor color */
+   transition: background-color 5000s ease-in-out; 
    -webkit-text-fill-color: white;  /* text color */
    -webkit-box-shadow: 0 0 0px 30px #444444 inset !important; /* background color*/
-   transition: background-color 5000s ease-in-out; 
-   caret-color: white; /* cursor color */
 }
 
-h2 {
-   color: white;
-   font-size: 30px;
-   padding: 10px 0;
+label {
+   color: #bb86fc;
+   display: block;
+   font-size: 13px;
 }
 
 .btn {
@@ -87,23 +68,15 @@ h2 {
 
 }
 
-button:focus {
-   outline: none;
-}
-
 .chkbox-group {
    padding-bottom: 25px;
 }
 
-.no-outline:focus {
-   outline: none;
-}
-
 .form-section {
+   align-items: center;
    background-color: #444444;
    border-bottom: 2px #bb86fc solid;
    box-sizing: border-box;
-   align-items: center;
    margin-bottom: 15px;
    padding: 5px 10px;
    width: 250px;
@@ -118,13 +91,20 @@ button:focus {
    margin-left: 20%;
 }
 
+.msgs {
+}
+
 .msg-section {
    margin-left: 150px;
-   width: 500px;
+   width: 350px;
 }
 
 .msg-section h3 {
    margin-top: 0;
+}
+
+.no-outline:focus {
+   outline: none;
 }
 
 .pswd-req {
@@ -132,30 +112,30 @@ button:focus {
 }
 
 .pswd-tip {
-   position: relative;
    display: inline-block;
+   position: relative;
 }
 
 .pswd-tip h3 {
-   margin: 5px 0;
    font-size: 14px;
+   margin: 5px 0;
 }
 
 .pswd-tip .pswd-tip-text {
+   background-color: grey;
+   border-radius: 6px;
+   color: white;
+   padding: 15px;
+   text-align: left;
    visibility: hidden;
    width: 200px;
-   background-color: grey;
-   color: white;
-   text-align: left;
-   padding: 15px;
-   border-radius: 6px;
 
    /* positoining of tip box */
-   position: absolute;
-   z-index: 1;
-   top: 130%;
    left: 30%;
    margin-left: -60px;
+   position: absolute;
+   top: 130%;
+   z-index: 1;
 
    /* fade-in effect */
    opacity: 0;
@@ -164,26 +144,25 @@ button:focus {
 
 .pswd-tip .pswd-tip-text::after {
    /* arrow on bottom of box (similar to checkboxes) */
-   content: "";
-   position: absolute;
+   border-color: grey transparent transparent transparent;
+   border-style: solid;
+   border-width: 10px;
    bottom: 100%;
+   content: "";
    left: 40%;
    margin-left: 5px;
-   border-width: 10px;
-   border-style: solid;
-   border-color: grey transparent transparent transparent;
+   position: absolute;
    transform: scale(1, -1);
 }
 
 .pswd-tip:hover .pswd-tip-text {
-   visibility: visible;
    opacity: 1;
+   visibility: visible;
 }
 
 .success-msgs {
    color: green;
    font-size: 14px;
-   /*margin-bottom: 10px;*/
 }
 
 .success-msgs a {
@@ -191,8 +170,8 @@ button:focus {
 }
 
 .term {
-   display: flex;
    align-items: center;
+   display: flex;
    margin: 10px 0;
 }
 
@@ -241,31 +220,18 @@ button:focus {
    width: 10px;
 }
 
-a {
-   font-family: bold;
-}
-
 .terms a:link,
 .terms a:hover,
 .terms a:visited, 
 .terms a:active {
-   outline: none;
    color: #bb86fc;
    font-family:'Roboto-Bold', sans-serif;
    font-size: 14px;
    font-weight: bold;
+   outline: none;
    padding: 5px 15px;
    text-decoration: none;
 }
-
-/*
-.term input[type='checkbox']:checked + label[] {
-   background: none;
-   height: 10px;
-   width: 10px;
-   background-color: #bb86fc;
-}
-*/
 
 .visibility-icon input[type='checkbox'] {
    display: none;
@@ -292,44 +258,18 @@ a {
    width: 30px;
 }
 
-.warning-msgs {
-   color: red;
-   font-size: 13px;
-}
-
 .warning-msgs h3 {
+   background-color: #111111;
+   border: 1px #444444 solid;
+   color: red;
+   font-size: 14px;
    margin: .5em 0;
+   padding: 5px 20px 10px 20px;
 }
 
 /* warning-on, warning-off */
-
-.warning-on {
-   color: red;
-   font-size: 16px;
-   visibility: visible;
-}
-
-.warning-off {
-   display: none;
-   font-size: 16px;
-}
 
 .with-eye {
    display: flex;
 }
 
-/*
-.matching-pswd-warning {
-   visibility: hidden;
-   font-size: 16px;
-}
-
-.pswd-cred-warning {
-   visibility: hidden;
-   font-size: 16px;
-}
-
-.terms-warning {
-   visibility: hidden;
-   font-size: 16px;
-}*/
